# linear-systems-solver

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/BigInt/: BigInt.cpp  BigInt.h  BigInt.hpp
src/common/BigInt/BigIntDigits/: BigIntDigits.cpp  BigIntDigits.h  BigIntDigits.hpp
src/common/BigInt/utils/: digitsOperations.h
src/common/Datatype/: Datatype.cpp  Datatype.hpp
src/common/LinearSystem/SolvingMethod/: SolvingMethod.h
src/common/Matrix/: Matrix.h  Matrix.hpp  Matrix.tpp
src/common/Matrix/InvalidMatrixSizeException/: InvalidMatrixSizeException.cpp  InvalidMatrixSizeException.h  InvalidMatrixSizeException.hpp
src/common/Matrix/MatrixSize/: MatrixSize.cpp  MatrixSize.h  MatrixSize.hpp
src/common/Matrix/Size/: Size.cpp  Size.h
src/common/Rational/: Rational.cpp  Rational.h  Rational.hpp  Rational.tpp
src/linear-systems-solver/: CMakeLists.txt  main.cpp
src/linear-systems-solver/Datatype/: Datatype.cpp  Datatype.h
src/linear-systems-solver/GaussAlgorithm/: GaussAlgorithm.hpp  GaussAlgorithm.tpp
src/linear-systems-solver/LinearSystem/: LinearSystem.cpp  LinearSystem.h  LinearSystem.hpp  LinearSystem.tpp
src/linear-systems-solver/LinearSystem/InvalidLinearSystemSizeException/: InvalidLinearSystemSizeException.cpp  InvalidLinearSystemSizeException.h
src/linear-systems-solver/LinearSystem/LinearSystemSize/: LinearSystemSize.cpp  LinearSystemSize.hpp
src/linear-systems-solver/LinearSystem/Size/: Size.cpp  Size.h
src/linear-systems-solver/LinearSystemGenerator/: LinearSystemGenerator.cpp  LinearSystemGenerator.hpp  LinearSystemGenerator.tpp
src/linear-systems-solver/LinearSystemPrinter/: LinearSystemPrinter.cpp  LinearSystemPrinter.h  LinearSystemPrinter.hpp  LinearSystemPrinter.tpp
src/linear-systems-solver/LinearSystemReader/: LinearSystemReader.cpp  LinearSystemReader.h  LinearSystemReader.hpp  LinearSystemReader.tpp
src/linear-systems-solver/LinearSystemSolver/: LinearSystemSolver.cpp  LinearSystemSolver.h  LinearSystemSolver.hpp  LinearSystemSolver.tpp
src/linear-systems-solver/LinearSystemSolver/LinearSystemSolvingAlgorithm/: LinearSystemSolvingAlgorithm.cpp  LinearSystemSolvingAlgorithm.hpp  LinearSystemSolvingAlgorithm.tpp
src/linear-systems-solver/LinearSystemSolver/SolvingMethod/: SolvingMethod.cpp  SolvingMethod.hpp
src/linear-systems-solver/LinearSystemsSolverApp/: LinearSystemsSolverApp.cpp  LinearSystemsSolverApp.h
src/linear-systems-solver/SolvingMethod/: SolvingMethod.cpp  SolvingMethod.hpp
src/linear-systems-solver/linearsystemreaders/FloatLinearSystemReader/: FloatLinearSystemReader.cpp  FloatLinearSystemReader.h
src/linear-systems-solver/linearsystemsolvingalgorithms/GaussAlgorithm/: GaussAlgorithm.cpp  GaussAlgorithm.hpp  GaussAlgorithm.tpp
src/linear-systems-solver/solvingalgorithms/GaussAlgorithm/: GaussAlgorithm.cpp  GaussAlgorithm.hpp  GaussAlgorithm.tpp
src/linear-systems-solver/utils/ArgumentsManager/: ArgumentsManager.cpp  ArgumentsManager.h
src/linear-systems-solver/utils/ArgumentsManager/Arguments/: Arguments.cpp  Arguments.h
src/linear-systems-solver/utils/ArgumentsManager/ArgumentsBuilder/: ArgumentsBuilder.cpp  ArgumentsBuilder.h
src/linear-systems-solver/utils/ArgumentsManager/Parameters/: Parameters.cpp  Parameters.h
src/matrix-calculator/: CMakeLists.txt  main.cpp
src/matrix-calculator/MatrixGenerator/: MatrixGenerator.cpp  MatrixGenerator.hpp  MatrixGenerator.tpp
src/matrix-calculator/MatrixOperator/: MatrixAdditionOperator.cpp  MatrixAdditionOperator.hpp  MatrixAdditionOperator.tpp  MatrixMultiplicationOperator.cpp  MatrixMultiplicationOperator.hpp  MatrixMultiplicationOperator.tpp  MatrixOperator.cpp  MatrixOperator.hpp
src/matrix-calculator/MatrixPrinter/: MatrixPrinter.cpp  MatrixPrinter.hpp  MatrixPrinter.tpp
src/matrix-calculator/MatrixReader/: MatrixReader.cpp  MatrixReader.hpp  MatrixReader.tpp
src/matrix-calculator/TokensReader/: TokensReader.cpp  TokensReader.hpp  TokensReader.tpp
src/shared/AbstractArgumentsManager/: AbstractArgumentsManager.cpp  AbstractArgumentsManager.h
src/shared/AbstractArgumentsManager/AbstractArgumentsBuilder/: AbstractArgumentsBuilder.cpp  AbstractArgumentsBuilder.h
src/shared/AbstractArgumentsManager/InvalidArgumentException/: InvalidArgumentException.cpp  InvalidArgumentException.h
src/shared/AbstractArgumentsManager/Parameter/: NonValuedParameter.cpp  NonValuedParameter.h  Parameter.cpp  Parameter.h  ValuedParameter.cpp  ValuedParameter.h
src/shared/BigInt/: BigInt.cpp
src/shared/BigInt/utils/: digitsOperations.cpp
src/shared/Matrix/: Matrix.h
src/shared/Matrix/Size/: Size.cpp
src/shared/Matrix/WrongMatrixSizeException/: WrongMatrixSizeException.cpp  WrongMatrixSizeException.h
src/shared/Rational/: Rational.cpp  Rational.h
tests/: CMakeLists.txt
tests/BigInt/: CMakeLists.txt  init.cpp  test_BigInt.cpp
tests/Matrix/: CMakeLists.txt  test_Matrix.cpp  test_MatrixSize.cpp  test_Size.cpp
tests/Rational/: CMakeLists.txt  test_Rational.cpp
